src/less/components/nav.less
/* ... */
.health-state-apply-colors() {
	color: @health-state-color;

	> .health-icon {
		background-color: @health-state-color;
	}
}

.nav-container .nav-representative-info {
	display: flex;
	flex-direction: column;
	line-height: 1;
	border-bottom: 1px solid @nav-border-color;
	padding: 0px 20px 0px 20px;
	margin-bottom: 15px;

	> .representative {
		display: flex;
		flex-direction: column;
		position: relative;

		&:hover > .representative-name-row > .name {
			border-bottom-style: dotted;
			border-color: #868AB0;

			&.no-interact {
				border-color: transparent;
			}
		}

		> h2 {
			text-transform: uppercase;
			font-size: 12px;
			font-weight: 500;
			color: @nav-half-muted-color;
			margin-bottom: 5px;
			.truncated-text();
		}
	}

	> .representative > .representative-name-row {
		display: flex;
		align-items: flex-end;
		margin-bottom: 8px;

		> .name {
			color: #FFF;
			font-weight: 600;
			font-size: 18px;
			margin-right: 6px;
			text-decoration: none;
			border-bottom: 2px dotted transparent;
			border-bottom-color: transparent;
			transition: border-color 100ms ease-in-out;
			padding: 0 0 3px 0;
			margin-bottom: -5px;
			.truncated-text();

			&:hover {
				border-bottom-style: solid;
				border-color: #FFF;
			}

			&.no-interact {
				&:hover {
					border-color: transparent;
				}
			}
		}

		> .weight-total {
			min-width: 40px;
			color: #FFF;
			font-weight: 400;
			font-size: 17px;
		}
	}

	> .representative > .representative-health-row {
		display: flex;
		align-items: center;
		margin-top: 5px;
		margin-bottom: 15px;

		&.health-green {
			@health-state-color: #32D296;
			.health-state-apply-colors();
		}

		&.health-yellow {
			@health-state-color: #FAA05A;
			.health-state-apply-colors();
		}

		&.health-red {
			@health-state-color: #F0506E;
			.health-state-apply-colors();
		}

		&.health-unknown {
			@health-state-color: #868AB0;
			.health-state-apply-colors();
		}

		&.health-loading > .uk-spinner {
			margin-right: 6px;
		}

		> .health-icon {
			display: flex;
			width: 15px;
			height: 15px;
			border-radius: 100%;
			margin-right: 6px;
		}

		> .label {
			font-size: 14px;
			margin-bottom: -1px;
		}
	}

	> .representative > .representative-help-tooltip {
		display: flex;
		flex-direction: column;
		width: calc(100% - 75px);
		max-width: 320px;
		position: absolute;
		top: 95%;
		border: 2px solid @nav-half-muted-color;
		background: @nav-tooltip-color-background;
		border-radius: 10px;
		padding: 10px 20px 10px 12px;
		z-index: 2;
		color: #DBDFEC;
		line-height: 1;
		opacity: 0;
		transition: opacity 200ms ease-in-out;
		pointer-events: none;

		&.visible {
			opacity: 1;
		}

		> .header-row {
			display: flex;
			align-items: center;
			margin-bottom: 8px;

			> h2 {
				font-size: 12px;
				text-transform: uppercase;
				color: #D8DDED;
				margin: 0 10px;
			}

			> .separator {
				flex: 1;
				height: 1px;
				background: #50576B;
			}
		}

		> p {
			line-height: 1.4em;

			&:last-child {
				margin-bottom: 0;
			}

			font-size: 0.9rem;

			&.primary {
				font-size: 1rem;
			}

			> .uk-icon {
				margin-right: 7px;
				vertical-align: 1px;
			}
		}

		> * + p {
			margin-top: 0;
		}
	}
}

.nav-container .nav-status-row {
	display: flex;
	align-items: center;
	border-bottom: 1px solid @nav-border-color;
	padding: 0px 20px 16px 20px;
	margin-bottom: 15px;

	&.interactable {
		text-decoration: none;
		cursor: pointer;

		> .status-labels > .label {
			border-bottom: 2px solid transparent;
			transition: border-color 100ms ease-in-out;
			padding: 4px 0 1px 0;
		}

		&:hover > .status-labels {
			> .label.uk-text-success {
				border-color: #32D296;
			}

			> .label.uk-text-warning {
				border-color: #FAA05A;
			}

			> .label.half-muted {
				border-color: @nav-half-muted-color;
			}
		}
	}

	&.half-muted {
		color: @nav-half-muted-color;
	}

	> .status-icon {
		width: 33px;
	}

	> .status-labels {
		display: flex;
		flex-direction: column;

		> .primary {

		}

		> .secondary {
			font-size: 13px;

			> a {
				text-decoration: none;
				border-bottom: 2px solid transparent;
				transition: border-color 100ms ease-in-out;
				padding: 4px 0 1px 0;

				&:hover {
					color: #4A90E2;
					border-color: #4A90E2;
				}
			}
		}
	}
}

.nav-nano-card + .nav-status-row {
	margin-top: -10px;
}
/* ... */

